# tts

./: .gitignore  README.md  app_native.py  config.json  launcher.pyw  pyproject.toml  run.ps1  setup-nouv.ps1  setup.ps1  update.ps1
app/: server.py  updater.py
app/static/: app.js  index.html  style.css
engines/: eunjeon_shim.py  finetune_worker.py  jieba_fast_shim.py  requirements-sovits-win.txt
installer/: VoiceStudio.iss
pipeline/: __init__.py  download.py  engine_f5.py  engine_sovits.py  segment.py  separate.py  synth.py  train.py
scripts/: download_sovits_models.py  make_icon.py  make_shortcut.ps1  patch_sovits_korean.py  restart.ps1  self_update.ps1  smoke_f5.py  smoke_sovits.py  smoke_upload.py
